--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <button id="rollDice">Roll Dice</button>
             <div id="diceResult"></div>
             <div id="playerInfo"></div>
+            <button id="resetGame">Reset Game</button>
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.7.0/vanilla-tilt.min.js"></script>
