--- a/index.html
+++ b/index.html
@@ -5,22 +5,127 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snakes and Ladders</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
 </head>
 <body>
     <div class="container">
-        <h1 data-aos="fade-down">Snakes and Ladders</h1>
-        <div class="board" data-tilt>
+        <h1>Snakes and Ladders</h1>
+        <div class="board">
+            <div class="cell" data-cell="1"></div>
+            <div class="cell" data-cell="2"></div>
+            <div class="cell" data-cell="3"></div>
+            <div class="cell" data-cell="4"></div>
+            <div class="cell" data-cell="5"></div>
+            <div class="cell" data-cell="6"></div>
+            <div class="cell" data-cell="7"></div>
+            <div class="cell" data-cell="8"></div>
+            <div class="cell" data-cell="9"></div>
+            <div class="cell" data-cell="10"></div>
+            <div class="cell" data-cell="11"></div>
+            <div class="cell" data-cell="12"></div>
+            <div class="cell" data-cell="13"></div>
+            <div class="cell" data-cell="14"></div>
+            <div class="cell" data-cell="15"></div>
+            <div class="cell" data-cell="16"></div>
+            <div class="cell" data-cell="17"></div>
+            <div class="cell" data-cell="18"></div>
+            <div class="cell" data-cell="19"></div>
+            <div class="cell" data-cell="20"></div>
+            <div class="cell" data-cell="21"></div>
+            <div class="cell" data-cell="22"></div>
+            <div class="cell" data-cell="23"></div>
+            <div class="cell" data-cell="24"></div>
+            <div class="cell" data-cell="25"></div>
+            <div class="cell" data-cell="26"></div>
+            <div class="cell" data-cell="27"></div>
+            <div class="cell" data-cell="28"></div>
+            <div class="cell" data-cell="29"></div>
+            <div class="cell" data-cell="30"></div>
+            <div class="cell" data-cell="31"></div>
+            <div class="cell" data-cell="32"></div>
+            <div class="cell" data-cell="33"></div>
+            <div class="cell" data-cell="34"></div>
+            <div class="cell" data-cell="35"></div>
+            <div class="cell" data-cell="36"></div>
+            <div class="cell" data-cell="37"></div>
+            <div class="cell" data-cell="38"></div>
+            <div class="cell" data-cell="39"></div>
+            <div class="cell" data-cell="40"></div>
+            <div class="cell" data-cell="41"></div>
+            <div class="cell" data-cell="42"></div>
+            <div class="cell" data-cell="43"></div>
+            <div class="cell" data-cell="44"></div>
+            <div class="cell" data-cell="45"></div>
+            <div class="cell" data-cell="46"></div>
+            <div class="cell" data-cell="47"></div>
+            <div class="cell" data-cell="48"></div>
+            <div class="cell" data-cell="49"></div>
+            <div class="cell" data-cell="50"></div>
+            <div class="cell" data-cell="51"></div>
+            <div class="cell" data-cell="52"></div>
+            <div class="cell" data-cell="53"></div>
+            <div class="cell" data-cell="54"></div>
+            <div class="cell" data-cell="55"></div>
+            <div class="cell" data-cell="56"></div>
+            <div class="cell" data-cell="57"></div>
+            <div class="cell" data-cell="58"></div>
+            <div class="cell" data-cell="59"></div>
+            <div class="cell" data-cell="60"></div>
+            <div class="cell" data-cell="61"></div>
+            <div class="cell" data-cell="62"></div>
+            <div class="cell" data-cell="63"></div>
+            <div class="cell" data-cell="64"></div>
+            <div class="cell" data-cell="65"></div>
+            <div class="cell" data-cell="66"></div>
+            <div class="cell" data-cell="67"></div>
+            <div class="cell" data-cell="68"></div>
+            <div class="cell" data-cell="69"></div>
+            <div class="cell" data-cell="70"></div>
+            <div class="cell" data-cell="71"></div>
+            <div class="cell" data-cell="72"></div>
+            <div class="cell" data-cell="73"></div>
+            <div class="cell" data-cell="74"></div>
+            <div class="cell" data-cell="75"></div>
+            <div class="cell" data-cell="76"></div>
+            <div class="cell" data-cell="77"></div>
+            <div class="cell" data-cell="78"></div>
+            <div class="cell" data-cell="79"></div>
+            <div class="cell" data-cell="80"></div>
+            <div class="cell" data-cell="81"></div>
+            <div class="cell" data-cell="82"></div>
+            <div class="cell" data-cell="83"></div>
+            <div class="cell" data-cell="84"></div>
+            <div class="cell" data-cell="85"></div>
+            <div class="cell" data-cell="86"></div>
+            <div class="cell" data-cell="87"></div>
+            <div class="cell" data-cell="88"></div>
+            <div class="cell" data-cell="89"></div>
+            <div class="cell" data-cell="90"></div>
+            <div class="cell" data-cell="91"></div>
+            <div class="cell" data-cell="92"></div>
+            <div class="cell" data-cell="93"></div>
+            <div class="cell" data-cell="94"></div>
+            <div class="cell" data-cell="95"></div>
+            <div class="cell" data-cell="96"></div>
+            <div class="cell" data-cell="97"></div>
+            <div class="cell" data-cell="98"></div>
+            <div class="cell" data-cell="99"></div>
+            <div class="cell" data-cell="100"></div>
         </div>
-        <div class="controls" data-aos="fade-up">
+        <div class="controls">
             <button id="rollDice">Roll Dice</button>
-            <div id="diceResult"></div>
-            <div id="playerInfo"></div>
-            <button id="resetGame">Reset Game</button>
         </div>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.7.0/vanilla-tilt.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+
+    <div class="dice" data-tilt>
+        <div class="dot dot-1"></div>
+        <div class="dot dot-2"></div>
+        <div class="dot dot-3"></div>
+        <div class="dot dot-4"></div>
+        <div class="dot dot-5"></div>
+        <div class="dot dot-6"></div>
+    </div>
+
     <script src="script.js"></script>
+    <script src="vanilla-tilt.js"></script>
 </body>
 </html>
