add Js and fix bug on homepage

--- a/pong/index.html
+++ b/pong/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="game-container">
         <div class="game-header">
-            <h1>Pong /h1>
+            <h1>Pong</h1>
             <div class="scoreboard">
                 <div id="player1-score" class="score">0</div>
                 <div class="divider">-</div>
